0032827: Configuration - compilation error on Emscripten SDK