src/DRAWEXE/DRAWEXE.cxx
@@ -18,6 +18,7 @@
 #include <DrawTrSurf.hxx>
 #include <Message.hxx>
 #include <Message_PrinterOStream.hxx>
+#include <Message_PrinterSystemLog.hxx>
 #include <NCollection_IndexedMap.hxx>
 #include <OSD.hxx>
 #include <OSD_Thread.hxx>
